# comp_prog

./: CMakeLists.txt  LICENSE  README.md
advent_of_code/: CMakeLists.txt
advent_of_code/2023/01/: CMakeLists.txt  solution.cpp  solution.py
advent_of_code/2023/02/: CMakeLists.txt  solution.cpp  solution.py
codechef/: CMakeLists.txt
codechef/starters_112/: CMakeLists.txt  arraygame.cpp  arraygame_in.txt  cursed.cpp  cursed_output.txt  logician.cpp  nutrition.cpp  permutation_.cpp  permutation_out.txt  readme.md
codeforces/: CMakeLists.txt
codeforces/cf_915/: CMakeLists.txt  a_constructive_problems.cpp  b_beginners_zelda.cpp  c_largest_subsequence.cpp  readme.md
contest_sandbox/: CMakeLists.txt  clean_sandbox.py  p_7.cpp  p_8.cpp  readme.md  template.cpp
contest_sandbox/cf_915/: p_6.cpp  p_6.txt
contest_sandbox/cf_916/: p_0.cpp  p_1.cpp  p_2.cpp  p_3.cpp  p_4.cpp
contest_sandbox/cf_edu_160/: p_0.cpp  p_0.txt  p_1.cpp  p_2.cpp  p_3.cpp  p_4.cpp  p_5.cpp  p_6.cpp
lib/: CMakeLists.txt  tersifier.py
lib/math/: CMakeLists.txt  modular_integer.hpp  modular_integer_terse.hpp  modular_integer_test.cpp
lib/moszir_lib/: moszir_lib.hpp
lib/moszir_lib/moszir_lib/: math.hpp  string.hpp  tersifier.py
lib/moszir_lib/moszir_lib/math/: modular_integer.hpp  modular_integer_terse.hpp
lib/moszir_lib/moszir_lib/string/: string_conversions.hpp  string_conversions_terse.hpp  string_vector.hpp  string_vector_terse.hpp  string_view_vector.hpp  string_view_vector_terse.hpp
lib/moszir_lib_tests/: CMakeLists.txt  modular_integer_test.cpp  string_conversions_test.cpp  string_split_benchmark.cpp  string_vector_test.cpp  string_view_vector_test.cpp
stl/: CMakeLists.txt  algorithm.cpp  algorithm_benchmarks.cpp
